--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,21 +1,50 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.model.application'
 
-android {
-    compileSdkVersion 21
-    buildToolsVersion "21.1.2"
+model{
+    android {
+        compileSdkVersion = 21
+        buildToolsVersion = "21.1.2"
 
-    defaultConfig {
-        applicationId "com.csipsimple"
-        minSdkVersion 8
-        targetSdkVersion 21
-    }
+        ndk {
+            moduleName = "native-audio-jni"
+            CFlags.add("-std=c99")
+            ldLibs.addAll(["android","OpenSLES", "log"])
+            abiFilters.addAll(['armeabi', 'armeabi-v7a', 'arm64-v8a',
+                               'x86', 'x86_64',
+                               'mips', 'mips64'])
+        }
 
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+        defaultConfig.with {
+            applicationId = "com.csipsimple"
+            minSdkVersion.apiLevel = 8
+            targetSdkVersion.apiLevel = 21
         }
     }
+
+    android.buildTypes {
+        release {
+            minifyEnabled = false
+            //proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+            proguardFiles.add(file('proguard-rules.txt'))
+        }
+    }
+
+    /*android.productFlavors {
+        create ("arm7") {
+            ndk.abiFilters.add("armeabi-v7a")
+        }
+        create ("arm8") {
+            ndk.abiFilters.add("arm64-v8a")
+        }
+        create ("x86-32") {
+            ndk.abiFilters.add("x86")
+        }
+        // for detailed abiFilter descriptions, refer to "Supported ABIs" @
+        // https://developer.android.com/ndk/guides/abis.html#sa
+        // build one including all productFlavors
+        // build one including all productFlavors
+        create("fat")
+    }*/
 }
 
 dependencies {
